# Rechnernetze-WS20-21

./: Makefile  README.md
smptc/: Makefile  README.md
smptc/glade/: window_main.glade
smptc/src/: main.c
smptc/src/base64/: base64.h
src/base64/: base64.c
xdt/: ChangeLog  FLAVOUR  Makefile.am  Makefile.in  README  config.h  config.h.in  config.status  configure  configure.ac  log.txt
xdt/doc/: Makefile  doxygen-static.conf  doxygen.conf  footer.html
xdt/scripts/: autogen  grep-src  indent-src  make-flavour  rmipcs
xdt/src/: Makefile  Makefile.am  Makefile.in
xdt/src/examples/: Makefile  Makefile.am  Makefile.in  local_dgram.h  local_dgram_client.c  local_dgram_server.c  timers.c  udp_client.c  udp_server.c
xdt/src/examples/.deps/: local_dgram_client.Po  local_dgram_server.Po  timers-timers.Po  udp_client.Po  udp_server.Po
xdt/src/service/: Makefile  Makefile.am  Makefile.in  errors.c  errors.h  main.c  pdu.c  pdu.h  queue.c  queue.h  receiver.c  receiver.h  sender.c  sender.h  service.c  service.h
xdt/src/service/.deps/: service-errors.Po  service-main.Po  service-pdu.Po  service-queue.Po  service-receiver.Po  service-sender.Po  service-service.Po
xdt/src/user/: Makefile  Makefile.am  Makefile.in  consumer.c  consumer.h  main.c  producer.c  producer.h  user.c  user.h
xdt/src/user/.deps/: user-consumer.Po  user-main.Po  user-producer.Po  user-user.Po
xdt/src/xdt/: Makefile  Makefile.am  Makefile.in  address.c  address.h  sdu.c  sdu.h  timer.c  timer.h
xdt/src/xdt/.deps/: address.Po  sdu.Po  timer.Po
